crates/biome_js_analyze/tests/specs/nursery/noPlaywrightEval/invalid/eval.js
await page.$eval('.foo', el => el.textContent);

